--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             <div>
                 <h3>Hello, World!</h3>
                 <h3>
-                    Ferrada essa Squad
+                    Ferrada essa Squad !
                 </h3>
             </div>
         </div>
