--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div class="box1">
             <header>
                 <div class="titulo">
-                    
+                    <img src="https://www.itau.com.br/content/dam/itau/varejo/logo-itau-varejo-desktop.png" class="logo">
                     <h1>Squad Rotativos</h1>
                     <img src="https://assets.openshift.com/hubfs/images/logos/osh/Logo-Red_Hat-OpenShift-A-Reverse-RGB.svg"
                         class="rh">
