--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,14 @@
             <header>
                 <div class="titulo">
                     
-                    <img src="https://www.itau.com.br/content/dam/itau/varejo/logo-itau-varejo-desktop.png" class="logo">
+                    <img src="https://www.itau.com.br/content/dam/itau/varejo/logo-itau-varejo-desktop.png">
                     <h1>Squad Rotativos</h1>
                     <img src="https://assets.openshift.com/hubfs/images/logos/osh/Logo-Red_Hat-OpenShift-A-Reverse-RGB.svg"
                         class="rh">
                 </div>
             </header>
             <div>
-                <h3>Hello, World!</h3>
+               <!-- <h3>Hello, World!</h3> -->
                 <h3>
                     !!! Ferrada essa Squad !!!
                 </h3>
