--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
 <head>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <!-- p5 for particle effects 
+    <!-- p5 for particle effects -->
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
     <script src="particles.js"></script>
--->
+
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
@@ -18,7 +18,7 @@
             <header>
                 <div class="titulo">
                     
-                    <img src="https://www.itau.com.br/content/dam/itau/varejo/logo-itau-varejo-desktop.png" class="rh">
+                    <img src="https://www.itau.com.br/content/dam/itau/varejo/logo-itau-varejo-desktop.png" width="100">
                     <h1>Squad Rotativos</h1>
                     <img src="https://assets.openshift.com/hubfs/images/logos/osh/Logo-Red_Hat-OpenShift-A-Reverse-RGB.svg"
                         class="rh">
