--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
             <header>
                 <div class="titulo">
                     
-                    <img src="https://www.itau.com.br/content/dam/itau/varejo/logo-itau-varejo-desktop.png" width="100">
+                    <img src="https://www.itau.com.br/content/dam/itau/varejo/logo-itau-varejo-desktop.png" class="logo"
+                         width="360" height="200">
                     <h1>Squad Rotativos</h1>
                     <img src="https://assets.openshift.com/hubfs/images/logos/osh/Logo-Red_Hat-OpenShift-A-Reverse-RGB.svg"
                         class="rh">
